--- a/AgeCalulator/index.css
+++ b/AgeCalulator/index.css
@@ -57,6 +57,15 @@ body{
   align-items: center;
   flex-wrap: wrap;
   margin-top: 0;
+  max-height: 0px;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 2s, opacity 3s, margin 250ms ease ;
+}
+.age_calc.expand{
+  margin-top: 30px;
+  max-height: 1000px; 
+  opacity: 1;
 }
 .age_calc .age-box{
   position: relative;
@@ -119,6 +128,15 @@ body{
     width: 100%;
   }
   .age_calc .age-box{
-    
+    width: 120px;
+    margin: 5px;   
+  }
+  .age_calc .age-box p.header{
+    padding: 10px 5px;
+    font-size: .8rem;
+  }
+  .age_calc .age-box .value{
+    padding: 30px 5px;
+    font-size: .9rem;
   }
 }
